Website Design Completed

--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gdecfest - Campus Events</title>
+    <title>TechFest 2026 | GDEC</title>
+    <meta name="theme-color" content="#0a0a0f" />
+    <meta name="description" content="TechFest 2026 - The Ultimate Technical Festival at GDEC. Register for exciting events across Technology, Sports, and Cultural categories." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@400;500;600;700;800;900&family=Share+Tech+Mono&display=swap"
       rel="stylesheet"
     />
   </head>
