feat: Initialize client-side application structure, routing, user registration, and event display pages.

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechFest 2026 | GDEC</title>
+    <title>UDAAN 2026 | GDEC</title>
     <meta name="theme-color" content="#0a0a0f" />
-    <meta name="description" content="TechFest 2026 - The Ultimate Technical Festival at GDEC. Register for exciting events across Technology, Sports, and Cultural categories." />
+    <meta name="description" content="UDAAN 2026 - The Ultimate Technical Festival at GDEC. Register for exciting events across Technology, Sports, and Cultural categories." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
